removed team section. put about text in one container

--- a/Applytogether/war/index.html
+++ b/Applytogether/war/index.html
@@ -74,7 +74,6 @@ Contact: mbooker@utexas.edu
           <ul class="header-navigation">
             <li class="current"><a href="#promo-block">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="menu-search">
               <span class="sep"></span>
@@ -193,81 +192,26 @@ Contact: mbooker@utexas.edu
     <h1>About <strong>Us</strong></h1>
     <div class="row"> 
       <div class="col-md-7">
-    <div><h4 style="font-weight:bold;">ApplyTogether is a non-profit that helps high-achieving students earn scholarships to attend colleges with high graduation rates. We provide these high school students with the best standardized test prep available, and pair them with a mentor who understands the college application process.</h4>
+    <div><h4 style="font-weight:bold;">ApplyTogether is a non-profit that helps high-achieving students earn scholarships to attend colleges with high graduation rates. We provide these high school students with the best standardized test prep available, and pair them with a mentor who understands the college application process.
+	<br><br>
+    ApplyTogether provides college application mentoring to high-achieving high school students. We are currently working with our first class of applicants.
+    <br><br> 
+    The video to the right provides more information about our organization, our beginnings, and the research behind our approach. For the best experience, view it in fullscreen mode.<br></h4>
+	<br>
+      <a href="http://applytogether.org/downloads/ApplyTogether_Overview.pdf" class="btn btn-primary"> Download an Overview of Our Organization </a>
+      <br><br>
+      <a href="http://applytogether.org/downloads/ApplyTogether_Approach.pdf" class="btn btn-primary"> Download an Overview of Our Approach </a>
       </div>
+      <br><br>
       <div align="right" class="fb-like" data-href="https://www.facebook.com/pages/ApplyTogether/171871996226478" data-send="true" data-width="380" data-show-faces="true"></div>
     </div>
     <div class="col-md-5 front-carousel">
       <iframe width="480" height="360" src="http://www.youtube.com/embed/odDDG6VIHkw" frameborder="0" allowfullscreen></iframe>
     </div>
     </div>
-    <br>
-    <br>
-    <<br>
-
-    <div class="row">
-    <div class="col-md-7">
-       <h4 style="font-weight:bold;"> ApplyTogether provides college application mentoring to high-achieving high school students. We are currently working with our first class of applicants. <br> <br> 
-    The slideshow to the right provides more information about our organization, our beginnings, and the research behind our approach. For the best experience, view it in fullscreen mode.<br></h4>
-      <a href="http://applytogether.org/downloads/ApplyTogether_Overview.pdf" class="btn btn-primary"> Download an Overview of Our Organization </a>
-      <br><br>
-      <a href="http://applytogether.org/downloads/ApplyTogether_Approach.pdf" class="btn btn-primary"> Download an Overview of Our Approach </a>
-    </div>
-    <div class="col-md-5 front carousel">
-      
-
-    </div>
-    </div>
        </div>
   </div>
   <!-- About block END -->
-  <!-- Team block BEGIN -->
-  <div class="team-block content content-center margin-bottom-40" id="team">
-    <div class="container">
-      <h2>Meet <strong>the team</strong></h2>
-      <div class="row">
-        <div class="col-md-4 item">
-          <img src="./assets/frontend/onepage/people/Michael_Booker.jpg" alt="Michael Booker" class="img-responsive">
-          <h3>Michael Booker</h3>
-          <em>CEO</em>
-          <p>Michael Booker was the valedictorian of the class of 2010 at Greenville-Weston High School in Greenville, Mississippi. He is currently studying electrical and computer engineering at the University of Texas at Austin, where he is a Gateway Scholar. He is the first person in his family to attend college.</p>
-        </div>
-        <div class="col-md-4 item">
-          <img src="./assets/frontend/onepage/people/Patrick_Brown.jpg" alt="Patrick Brown" class="img-responsive">
-          <h3>Patrick Brown</h3>
-          <em>Founder</em>
-          <p>Patrick graduated from Georgetown University, where he was a voting member of the College Admissions Committee. After graduating, he taught high school social studies in the Mississippi Delta through Teach for America, and counseled students on college applications. He is currently a student at Harvard Law School.</p>
-        </div>
-        <div class="col-md-4 item">
-          <img src="./assets/frontend/onepage/people/Michelle_Skinner.jpg" alt="Michelle Skinner" class="img-responsive">
-          <h3>Michelle Skinner</h3>
-          <em>Secretary</em>
-          <p>Michelle graduated from Butler University, where she majored in English and Spanish. After graduating, she taught middle school reading and writing in Itta Bena, Mississippi, through Teach for America. Michelle is currently a teacher at Roxbury Preparatory Charter School in Massachussetts.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 item">
-          <img src="./assets/frontend/onepage/people/Paul_Campbell.jpg" alt="Paul Campbell" class="img-responsive">
-          <h3>Paul Campbell</h3>
-          <em>Treasurer</em>
-          <p>Paul graduated from Georgetown University, where he won the international business faculty award for academic excellence. He is currently a Senior Consultant at the strategy consulting firm Monitor Group, and an alumni interviewer for the Georgetown Alumni Admissions Program.
-        </div>
-        <div class="col-md-4 item">
-          <img src="./assets/frontend/onepage/people/Samantha_Hoare.jpg" alt="Samantha Hoare" class="img-responsive">
-          <h3>Samantha Hoare</h3>
-          <em>Board Member</em>
-          <p>Samantha is a Managing Director of Teacher Leadership Development with Teach For America in the Mississippi Delta, and has spent two years developing a program to promote college success in Belize. Samantha holds a master's degree from the University of the West Indies and a bachelor's degree from Duke University.</p>
-        </div>
-        <div class="col-md-4 item">
-          <img src="./assets/frontend/onepage/people/John_Tighe.jpg" alt="John T. Tighe III" class="img-responsive">
-          <h3>John T. Tighe III</h3>
-          <em>Secretary</em>
-          <p>John T. Tighe III is the Founder, President and CEO of TMG Health, Inc. He started the company in 1998, and it has grown from one employee to over 1,200 employees. He is a graduate of the University of Pittsburgh with a BS in Pharmacy and received a Masters in Business Administration from Villanova University.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Team block END -->
   <!-- Partners block BEGIN -->
   <div class="partners-block">
     <div class="container">
